# cyber-watch

./: .dockerignore  .env.example  .gitignore  DockerFile  README.md  cyberwatch-digest.service  cyberwatch-digest.timer  cyberwatch-init.service  cyberwatch.service  docker-compose.yml  pyproject.toml
config/: sources.yaml
src/cyberwatch/: __main__.py
src/cyberwatch/core/: database.py  models.py  scheduler.py
src/cyberwatch/enrichment/: classifier.py  cvss_scorer.py  dedup.py
src/cyberwatch/notifiers/: base.py  digest.py  email.py  slack.py  teams.py
src/cyberwatch/parsers/: rss_parser.py
src/cyberwatch/sources/: base.py  cert_fr.py  github_releases.py  hacker_news_sec.py  krebs.py  msrc.py  nist_nvd.py  security_blogs.py  vendor_changelog.py  zdi.py
tests/test_sources/: test_models_and_zdi.py
